# CardGoose

./: .env.example  .env.local.example  .env.production.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
api/: Dockerfile  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
api/prisma/: schema.prisma
api/src/: app.test.ts  app.ts  health.test.ts  index.ts  test-setup.ts
api/src/lib/: assetResolve.test.ts  assetResolve.ts  csv.test.ts  csv.ts  devProfile.test.ts  devProfile.ts  jwt.test.ts  jwt.ts  layoutArtKeys.test.ts  layoutArtKeys.ts  logger.test.ts  logger.ts  pdfExportPayload.test.ts  pdfExportPayload.ts  prisma.ts  s3.test.ts  s3.ts  sqs.test.ts  sqs.ts
api/src/middleware/: auth.test.ts  auth.ts
api/src/routes/: assets.test.ts  assets.ts  auth.test.ts  auth.ts  exports.test.ts  exports.ts  (+2 more)
docker/localstack-ready.d/: init-aws.sh
frontend/: .env.local.example  Dockerfile  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
infra/: BOOTSTRAP.md  DEPLOY_CI.md  README.md  backend.tf  providers.tf
landing/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.toml
landing/src/: main.css  main.ts  vite-env.d.ts
worker/: Dockerfile  README.md  pyproject.toml  requirements.txt
worker/src/baker/: __init__.py  env.py  handler.py  logging_config.py  main.py  queue.py  renderer.py  run_pdf_sync.py  stitcher.py
worker/tests/: conftest.py  test_smoke.py
(+92 files in other folders)
